<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>ivv-parent</artifactId>
        <groupId>io.mosip.ivv</groupId>
        <version>0.1.1-SNAPSHOT</version>
    </parent>

    <groupId>io.mosip.ivv.orchestrator</groupId>
    <artifactId>ivv-orchestrator</artifactId>
    <properties>
        <suiteXmlFile>testng.xml</suiteXmlFile>
    </properties>
    <build>
        <plugins>
           <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <reportsDirectory>target/surefire</reportsDirectory>
                    <suiteXmlFiles>
                        <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                    </suiteXmlFiles>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                </configuration>
            </plugin>
            
            
            <plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<argLine>-Dfile.encoding=UTF-8</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.3.0</version>
				<executions>
					<execution>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<classpathPrefix>lib/</classpathPrefix>
							<mainClass>io.mosip.ivv.orchestrator.TestRunner</mainClass>
						</manifest>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
				</configuration>
			</plugin>
            
            
        </plugins>
    </build>
		    <dependencies>
		
			<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.11</version>
			</dependency>
    
        <!--   core dependencies     -->
        <dependency>
            <groupId>io.mosip.ivv.core</groupId>
            <artifactId>ivv-core</artifactId>
            <version>0.1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.mosip.ivv.dg</groupId>
            <artifactId>ivv-dg</artifactId>
            <version>0.1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.mosip.ivv.preregistration</groupId>
            <artifactId>ivv-preregistration</artifactId>
            <version>0.1.1-SNAPSHOT</version>
        </dependency>
       <!--  <dependency>
            <groupId>io.mosip.ivv.registration</groupId>
            <artifactId>ivv-registration</artifactId>
            <version>0.1.1-SNAPSHOT</version>
        </dependency> -->
        <dependency>
            <groupId>io.mosip.ivv.regprocessor</groupId>
            <artifactId>ivv-regprocessor</artifactId>
            <version>0.1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.mosip.ivv.kernel</groupId>
            <artifactId>ivv-kernel</artifactId>
            <version>0.1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.mosip.ivv.ida</groupId>
            <artifactId>ivv-ida</artifactId>
            <version>0.1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>io.mosip.ivv.mutators</groupId>
            <artifactId>ivv-mutators</artifactId>
            <version>0.1.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.aventstack</groupId>
            <artifactId>extentreports</artifactId>
            <version>3.0.7</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
			<groupId>io.mosip.automationtests</groupId>
			<artifactId>automationtests</artifactId>
			<version>1.0.10</version>
		</dependency>
        
    </dependencies>
    

</project>